# todo-hub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  autoheader.toml  pyproject.toml
.github/workflows/: publish.yml
src/todohub/: __init__.py  config.py  config_default.toml  main.py  models.py  parser.py  presenter.py  scanner.py  scheduler.py
tests/: test_cli.py  test_config.py  test_config_missing.py  test_doctor.py  test_doctor_empty_projects.py  test_doctor_invalid_path.py  test_doctor_missing_todo.py  test_doctor_ok.py  test_doctor_todo_found.py  test_main_config.py  test_main_invalid_project.py  test_main_no_projects.py  test_main_today.py  test_main_week.py  test_parser.py  test_parser_indented.py  test_parser_priority.py  test_presenter.py  test_presenter_doctor.py  test_presenter_priority.py  test_presenter_project_label.py  test_presenter_projects.py  test_presenter_status.py  test_presenter_today.py  test_presenter_week.py  test_scanner.py  test_scheduler.py  test_scheduler_projects.py  test_scheduler_today.py  test_scheduler_week.py
