[tool.poetry]
name = "todo-hub"
version = "0.3.2"
description = "Aggregate TODO deadlines across multiple projects into a single agenda-style CLI view."
authors = ["Catur Wahyu"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "todohub", from = "src" }
]

keywords = [
    "todo",
    "task",
    "cli",
    "agenda",
    "productivity",
    "developer-tools",
    "terminal",
    "task-manager",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "Topic :: Office/Business :: Scheduling",
]

[tool.poetry.urls]
Homepage = "https://github.com/cwahyu/todo-hub"
Repository = "https://github.com/cwahyu/todo-hub"
Issues = "https://github.com/cwahyu/todo-hub/issues"
Documentation = "https://github.com/cwahyu/todo-hub#readme"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4"
platformdirs = "^4.9"

[tool.poetry.scripts]
todo-hub = "todohub.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=todohub --cov-report=term-missing --cov-fail-under=80 -q"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pre-commit>=4.5.1,<5.0.0",
    "twine (>=6.2.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
