[project]
name = "todo-hub"
version = "0.3.3"
description = "Cross-repository TODO aggregator with a deadline-first agenda view."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Catur Wahyu" }]
requires-python = ">=3.12"

keywords = [
    "todo",
    "cli",
    "agenda",
    "productivity",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

dependencies = [
    "colorama>=0.4",
    "platformdirs>=4.9",
]

[project.urls]
Homepage = "https://github.com/cwahyu/todo-hub"
Repository = "https://github.com/cwahyu/todo-hub"
Issues = "https://github.com/cwahyu/todo-hub/issues"

[project.scripts]
todo-hub = "todohub.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/todohub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=todohub --cov-report=term-missing --cov-fail-under=80 -q"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
